[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentid"
version = "0.1.0"
description = "Official Python SDK for the Agent ID platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Agent ID", email = "sdk@getagent.id" }]
keywords = ["agent", "ai", "identity", "agentid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://getagent.id"
Documentation = "https://getagent.id/docs"
Repository = "https://github.com/getagentid/agentid-python"
Issues = "https://github.com/getagentid/agentid-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentid*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
